--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h1>Sites:</h1>
-    <h2><a href="capys/index.html"></a> e-sports</h2>
+    <h2><a href="capys/index.html">e-sports</a></h2>
 </body>
 </html>
